; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ep93xx/extr_core.c_ep93xx_devcfg_set_clear.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ep93xx/extr_core.c_ep93xx_devcfg_set_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@syscon_swlock = common dso_local global i32 0, align 4
@EP93XX_SYSCON_DEVCFG = common dso_local global i32 0, align 4
@EP93XX_SYSCON_SWLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ep93xx_devcfg_set_clear(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @spin_lock_irqsave(i32* @syscon_swlock, i64 %7)
  %9 = load i32, i32* @EP93XX_SYSCON_DEVCFG, align 4
  %10 = call i32 @__raw_readl(i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* %6, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %4, align 4
  %15 = xor i32 %14, -1
  %16 = load i32, i32* %6, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* @EP93XX_SYSCON_SWLOCK, align 4
  %19 = call i32 @__raw_writel(i32 170, i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @EP93XX_SYSCON_DEVCFG, align 4
  %22 = call i32 @__raw_writel(i32 %20, i32 %21)
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* @syscon_swlock, i64 %23)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
